--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1315,7 +1315,7 @@ nav:
                 - Set up APK as a Gateway: install-and-setup/setup/distributed-deployment/configuring-apim-as-a-gateway.md
                 - Set up a Key Manager:
                     - Set up a Third-party Key Manager: install-and-setup/setup/distributed-deployment/configure-a-third-party-key-manager.md
-                    - Set up WSO2 Identity Server as a Key Manager: install-and-setup/setup/distributed-deployment/configuring-wso2-identity-server-as-a-key-manager.md
+                    - Set up WSO2 Identity Server as a Resident Key Manager: install-and-setup/setup/distributed-deployment/configuring-wso2-identity-server-as-a-key-manager.md
                 - Set up Databases:
                     - Overview: install-and-setup/setup/setting-up-databases/overview.md
                     - Change Default Databases:
