--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -98,8 +98,7 @@ nav:
                 - Test a WebSub/WebHook API: design/create-api/create-streaming-api/test-a-websub-api.md
             - Create an API From a Service: design/create-api/create-an-api-using-a-service.md
             #- Build APIs in Integration Studio: design/create-api/api-integration-studio.md
-            - AI APIs:
-                - Create an AI API: design/create-api/create-ai-api/create-an-ai-api.md
+            - AI APIs: design/create-api/create-ai-api/create-an-ai-api.md
         - Create API Revisions: design/create-api/create-api-revisions.md
         - Add Custom Properties to APIs: design/create-api/adding-custom-properties-to-apis.md
         - Change the Thumbnail of an API: design/create-api/change-api-thumbnail.md
