--- a/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
+++ b/en/docs/reference/product-apis/admin-apis/admin-v4/admin-v4.yaml
@@ -94,12 +94,17 @@ info:
     If you use a different authentication mechanism, this process may change.
 
     # Try out in Postman
-    If you want to try-out the embedded postman collection with "Run in Postman" option, please follow the guidelines listed below.
+    If you want to try-out the Postman collection, please follow the guidelines listed below.
+    * Download and import the following collection to Postman.
     * All of the OAuth2 secured endpoints have been configured with an Authorization Bearer header with a parameterized access token. Before invoking any REST API resource make sure you run the `Register DCR Application` and `Generate Access Token` requests to fetch an access token with all required scopes.
     * Make sure you have an API Manager instance up and running.
     * Update the `basepath` parameter to match the hostname and port of the APIM instance.
-
-    [![Run in Postman](https://run.pstmn.io/button.svg)](https://god.gw.postman.com/run-collection/39323091-3591be29-f577-4c43-8041-fd00099ba578)
+     
+     <a href="../../../../../assets/postman-collections/AdminAPI.postman_collection.json"
+     download="WSO2 API Manager 4.4.0 Admin REST API.postman_collection.json"
+     style="display: inline-block; padding: 10px 15px; color: white; background-color: #ef5b25; text-align: center; text-decoration: none; border-radius: 5px;font-weight: bold;">
+     Download Postman Collection
+     </a>
   contact:
     name: WSO2
     url: https://wso2.com/api-manager/
