--- a/en/docs/reference/product-apis/devops-apis/devops-v0/devops-v0.yaml
+++ b/en/docs/reference/product-apis/devops-apis/devops-v0/devops-v0.yaml
@@ -26,7 +26,7 @@ info:
     * Make sure you have an API Manager instance up and running.
     * Update the `basepath` parameter to match the hostname and port of the APIM instance.
 
-     <a href="../../../../../assets/attachments/postman-collections/DevOpsAPI.postman_collection.json"
+     <a href="../../../../../assets/attachments/reference/devops-v0.2-postman-collection.json"
      download="WSO2 API Manager 4.4.0 DevOps REST API.postman_collection.json"
      style="display: inline-block; padding: 10px 15px; color: white; background-color: #ef5b25; text-align: center; text-decoration: none; border-radius: 5px;font-weight: bold;">
      Download Postman Collection
