--- a/en/tools/config-catalog-generator/data/_http-passthrough-transport-blocking.toml
+++ b/en/tools/config-catalog-generator/data/_http-passthrough-transport-blocking.toml
@@ -1,9 +1,19 @@
 [transport.blocking_http]
+sender.parameters.cacheHttpClient = true
+sender.parameters.Transfer-Encoding = ""
+sender.parameters.defaultMaxConnectionsPerHost = 200
+sender.parameters.OmitSOAP12Action = true
+sender.parameters.SO_TIMEOUT = 60000
 sender.parameters.'http.proxyHost' = "$env{OUT_PROXY_HOST}"
 sender.parameters.'http.proxyPort' = "$env{OUT_PROXY_PORT}"
 sender.parameters.'http.nonProxyHosts' = "$env{OUT_PROXY_NON_HOSTS}"
 
 [transport.blocking_https]
+sender.parameters.cacheHttpClient = true
+sender.parameters.Transfer-Encoding = ""
+sender.parameters.defaultMaxConnectionsPerHost = 200
+sender.parameters.OmitSOAP12Action = true
+sender.parameters.SO_TIMEOUT = 60000
 sender.parameters.'http.proxyHost' = "$env{OUT_PROXY_HOST}"
 sender.parameters.'http.proxyPort' = "$env{OUT_PROXY_PORT}"
 sender.parameters.'http.nonProxyHosts' = "$env{OUT_PROXY_NON_HOSTS}"
