--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -75,8 +75,7 @@ nav:
           - Overview: get-started/overview.md
           - Key Concepts: get-started/key-concepts.md
           - Architecture: get-started/apim-architecture.md
-          - Quick Start Guide:
-                - API Management: get-started/api-manager-quick-start-guide.md
+          - Quick Start Guide: get-started/api-manager-quick-start-guide.md
           - About this Release: get-started/about-this-release.md
     - Design APIs:
         - Design APIs Overview: design/design-api-overview.md
