Add AWS Lambda endpoint configs

--- a/en/docs/reference/product-apis/publisher-apis/publisher-v3/publisher-v3.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v3/publisher-v3.yaml
@@ -8748,6 +8748,20 @@ components:
                 "suspendMaxDuration": "100",
                 "actionSelect": "fault"
                 }
+            
+            `AWS Lambda as Endpoint`
+
+              {
+                "endpoint_type":"awslambda",
+                "access_method":"role-supplied|stored",
+                "assume_role":true|false,
+                "amznAccessKey":"access_method==stored?<accessKey>:<empty>",
+                "amznSecretKey":"access_method==stored?<secretKey>:<empty>",
+                "amznRegion":"access_method==stored?<region>:<empty>",
+                "amznRoleArn":"assume_role==true?<roleArn>:<empty>",
+                "amznRoleSessionName":"assume_role==true?<roleSessionName>:<empty>",
+                "amznRoleRegion":"assume_role==true?<roleRegion>:<empty>"
+              }
               
           example:
             endpoint_type: http
