--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1964,6 +1964,6 @@ extra:
             version: 1.2.0-1
             git_tag: v1.2.0.1
     site_version: 4.3.0
-    # base_path: http://localhost:8000/en/next/
+    # base_path: http://localhost:8000/en/4.3.0/
     base_path: https://apim.docs.wso2.com/en/4.3.0
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.24.1
