Add runtime diagnostic tool guide

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -437,6 +437,7 @@ nav:
               - Error Handling: troubleshooting/error-handling.md
               - Capturing System Data in Error Situations: troubleshooting/capturing-system-data-in-error-situations.md
               - Troubleshooting in Production Environments: troubleshooting/admin-troubleshooting-in-production-environments.md
+              - Utilizing Runtime Diagnostic Tool: troubleshooting/utilizing-runtime-diagnostic-tool.md
               - Cleaning Up Partially Created Keys: troubleshooting/cleaning-up-partially-created-keys.md
               - Configure XSLT Mediation with Xalan: troubleshooting/configuring-xslt-mediation-with-xalan.md
               - Troubleshooting 'Registered callback does not match with the provided url' error: troubleshooting/troubleshooting-invalid-callback-error.md
