--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -94,7 +94,7 @@ nav:
                 - Create a SSE API: design/create-api/create-streaming-api/create-a-sse-streaming-api.md
                 - Create a Streaming API from an AsyncAPI Definition: design/create-api/create-streaming-api/create-a-streaming-api-from-an-asyncapi-definition.md
                 - Test a WebSub/WebHook API: design/create-api/create-streaming-api/test-a-websub-api.md
-            - Create an API From a Service: design/create-api/create-an-api-using-a-service.md
+            - Create an API Using a Service: design/create-api/create-an-api-using-a-service.md
             #- Build APIs in Integration Studio: design/create-api/api-integration-studio.md
             - AI APIs: design/create-api/create-ai-api/create-an-ai-api.md
         - Create API Revisions: design/create-api/create-api-revisions.md
