--- a/en/docs/reference/product-apis/publisher-apis/publisher-v3/publisher-v3.yaml
+++ b/en/docs/reference/product-apis/publisher-apis/publisher-v3/publisher-v3.yaml
@@ -9107,7 +9107,7 @@ components:
           example: wso2
         audiences:
           type: array
-          description: The audiences of the API product for jwt validation. Accepted values are any String values
+          description: The audiences of the API product for jwt validation. Any string value is accepted.
           items:
             type: string
             example: [ "aud1","aud2","aud3" ]
