--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -560,7 +560,10 @@ markdown_extensions:
           custom_checkbox: true
     - pymdownx.tilde
 plugins:
-    - search
+    - search:
+        separator: "[^\\w._-]+"
+        lang: ['en']
+        prebuild_index: true
     - markdownextradata: {}
     - exclude:
           glob:
