Add regex for search configurations

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -538,7 +538,10 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
 plugins:
-  - search
+  - search:
+        separator: "[^\\w._-]+"
+        lang: ['en']
+        prebuild_index: true
   - markdownextradata: {}
   - exclude:
       glob:
