--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -596,6 +596,7 @@ nav:
                 - Manage Integrations: install-and-setup/setup/api-controller/managing-integrations/managing-integrations-with-ctl.md
                 - Encrypt Secrets with apictl: install-and-setup/setup/api-controller/encrypting-secrets-with-ctl.md
                 - Enable Correlation Logs with apictl: install-and-setup/setup/api-controller/enabling-correlation-logs-with-apictl.md
+                - AI Related Operations with apictl: install-and-setup/setup/api-controller/ai-related-operations-with-apictl.md
                 - Advanced Topics:
                     - Create Custom Users to Perform apictl Operations: install-and-setup/setup/api-controller/advanced-topics/creating-custom-users-to-perform-api-controller-operations.md
                     - Configure Environment Specific Parameters: install-and-setup/setup/api-controller/advanced-topics/configuring-environment-specific-parameters.md
