--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -334,6 +334,7 @@ nav:
                 - HTTP Access Logs: observe/api-manager/monitoring-http-access-logs.md
                 - Audit Logs: observe/api-manager/monitoring-audit-logs.md
                 - API Logs: observe/api-manager/monitoring-api-logs.md
+                - Websocket Logs : observe/api-manager/monitoring-websocket-logs.md
             - Traces:
                 - OpenTracing: observe/api-manager/traces/monitoring-with-opentracing.md
                 - OpenTelemetry: observe/api-manager/traces/monitoring-with-opentelemetry.md
