--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -367,6 +367,7 @@ nav:
             - Understand the New Configuration Model: reference/understanding-the-new-configuration-model.md
             - API-M Config Catalog: reference/config-catalog.md
         - API Controller (APICTL): reference/apictl/wso2-api-controller.md
+        - Rule Validator: governance/rule-validator/rule-validator.md
         - Customizations:
             - Vendor Specific Extensions: reference/vendor-extensions-catalog.md
             - Extend WSO2 API Manager:
